# serve-local-scorers

./: .gitignore  OLD_README.md  README.md  download_models.py  encoder_config.yaml  encoder_server.py  gpu_config.yaml  pyproject.toml  requirements.txt  serve_model.py  test_server.py  weave_config.yaml  weave_scorer_server.py
encoder_server/: __init__.py  batch_processor.py  cli.py  model_loader.py  server.py
tests/: performance_test.py  test_all_scorers.py  test_basic.py  test_single_scorer.py  test_weave_server.py
utils/: device_utils.py
