[project]
name = "serve-scorers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "simple-parsing>=0.1.6",
    "openai>=1.91.0",
    "weave[scorers]",
    "wandb",
    "fastapi",
    "uvicorn[standard]",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "aiohttp>=3.8.0",
    "accelerate>=0.20.0",
    "optimum>=1.12.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.20.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.1",
]
